--- a/src/main/resources/fxml/customer/customer.fxml
+++ b/src/main/resources/fxml/customer/customer.fxml
@@ -7,30 +7,20 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="597.0" prefWidth="823.0" styleClass="ee" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="customer">
    <children>
-      <ButtonBar layoutX="323.0" layoutY="17.0" prefHeight="40.0" prefWidth="485.0">
+      <ButtonBar layoutX="287.0" layoutY="10.0" prefHeight="40.0" prefWidth="485.0">
          <buttons>
             <Button fx:id="cartbut" mnemonicParsing="false" onAction="#seeCart" prefHeight="55.0" text="YourCart" textAlignment="CENTER">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button fx:id="productBut" mnemonicParsing="false" onAction="#seeProducts" prefHeight="40.0" prefWidth="212.0" text="MyProducts" textAlignment="CENTER">
-               <font>
-                  <Font size="14.0" />
-               </font></Button>
          </buttons>
       </ButtonBar>
-      <TextField fx:id="searchFiled" layoutX="70.0" layoutY="24.0" onAction="#searchBar" prefHeight="25.0" prefWidth="243.0" promptText="type to find products" />
-      <Text fx:id="label1" layoutX="14.0" layoutY="44.0" onDragDetected="#textView" strokeType="OUTSIDE" strokeWidth="0.0" text="search" wrappingWidth="55.9677734375">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <TableView fx:id="table" layoutX="14.0" layoutY="71.0" prefHeight="512.0" prefWidth="658.0">
+      <TextField fx:id="searchFiled" layoutX="150.0" layoutY="56.0" onAction="#searchBar" prefHeight="25.0" prefWidth="243.0" promptText="type to find products" />
+      <TableView fx:id="table" layoutX="14.0" layoutY="90.0" prefHeight="493.0" prefWidth="758.0">
         <columns>
           <TableColumn fx:id="id" prefWidth="54.0" text="id" />
           <TableColumn fx:id="name" prefWidth="277.0" text="name" />
@@ -39,6 +29,7 @@
             <TableColumn fx:id="price" minWidth="0.0" prefWidth="126.0" text="price" />
         </columns>
       </TableView>
-      <Button fx:id="addproducts" layoutX="721.0" layoutY="114.0" mnemonicParsing="false" onAction="#addProductsPress" text="Button" />
+      <Button fx:id="back" layoutX="15.0" layoutY="10.0" mnemonicParsing="false" onAction="#back" text="back" />
+      <Button fx:id="search" layoutX="68.0" layoutY="50.0" mnemonicParsing="false" onAction="#search" text="search" />
    </children>
 </AnchorPane>
