--- a/src/main/resources/fxml/seller/seller.fxml
+++ b/src/main/resources/fxml/seller/seller.fxml
@@ -1,14 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="seller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seller">
+   <children>
+      <VBox prefHeight="600.0" prefWidth="200.0" styleClass="right-bar" stylesheets="">
+         <children>
+            <Pane prefHeight="50.0" prefWidth="150.0">
+               <children>
+                  <Button fx:id="back" layoutX="14.0" layoutY="13.0" mnemonicParsing="false" onAction="#back" text="back" />
+               </children></Pane>
+            <Pane prefHeight="50.0" prefWidth="150.0">
+               <children>
+                  <Button fx:id="addproducts" layoutX="67.0" layoutY="5.0" mnemonicParsing="false" onAction="#addProductsPress" prefHeight="40.0" prefWidth="129.0" styleClass="add-btn" text="Add Products">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../images/shopping.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane prefHeight="50.0" prefWidth="150.0">
+               <children>
+                  <Button fx:id="orderDetail" layoutX="67.0" layoutY="5.0" mnemonicParsing="false" onAction="#detailClicked" prefHeight="40.0" prefWidth="129.0" styleClass="add-btn" text="Order Detail">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+            </Pane>
+            <Pane prefHeight="50.0" prefWidth="150.0" />
+            <Pane prefHeight="50.0" prefWidth="150.0">
+               <children>
+                  <Label layoutX="23.0" layoutY="19.0" prefHeight="30.0" prefWidth="100.0" text="Your revenue">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="109.0" layoutY="26.0" prefHeight="10.0" prefWidth="28.0" text="Label" />
+               </children></Pane>
+         </children>
+      </VBox>
+      <Pane layoutX="200.0" prefHeight="200.0" prefWidth="700.0" styleClass="temp">
+         <children>
+            <TextField fx:id="searchfield" layoutY="125.0" prefHeight="50.0" prefWidth="409.0" promptText="input what you want to find" styleClass="search-box" stylesheets="" />
+            <Button fx:id="search" layoutX="428.0" layoutY="125.0" mnemonicParsing="false" onAction="#search" prefHeight="50.0" prefWidth="110.0" styleClass="search-button" stylesheets="" text="Search" />
+            <Label layoutX="16.0" layoutY="17.0" prefHeight="30.0" prefWidth="100.0" text="Khoi store">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="126.0" fitWidth="200.0" layoutX="560.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/shoppingIcon.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+      <Pane layoutX="200.0" layoutY="186.0" prefHeight="400.0" prefWidth="700.0">
+         <children>
+            <Label layoutX="21.0" layoutY="7.0" prefHeight="30.0" prefWidth="135.0" text="My Products">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <TableView fx:id="tableView" layoutY="37.0" prefHeight="348.0" prefWidth="679.0">
+               <columns>
+                  <TableColumn fx:id="id" prefWidth="49.0" text="Id" />
+                  <TableColumn fx:id="name" prefWidth="169.0" text="Product name" />
+                  <TableColumn fx:id="category" prefWidth="74.0" text="Category" />
+                  <TableColumn fx:id="quantity" prefWidth="74.0" text="Quantity" />
+                  <TableColumn fx:id="price" minWidth="0.0" prefWidth="92.0" text="Price" />
+                  <TableColumn fx:id="sales" prefWidth="101.0" text="Sales" />
+               </columns>
+            </TableView>
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
